fix(navbar): adjust spacing and padding sizes on components fix(overview): correct padding on cards and add message for pending transactions style: adjust width and padding of main container

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,5 +63,5 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .container{
-  @apply w-11/12 max-w-7xl mx-auto #{!important};
+  @apply w-full md:w-11/12 px-2 md:px-0 max-w-7xl mx-auto #{!important};
 }
